--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 JWT_SECRET=school_info_hub_kz_super_secret_key_123456
 JWT_EXPIRATION=1d
 
-# Әзірше бос - SetupPasswordCard арқылы хэш генерацияланады
-ADMIN_PASSWORD_HASH=$2b$10$aj4Cw1zxFuZ6466S8KGEBOv8ez/H/7iR6thzOveGX2HTnXCWghFJi
+# Әкімшілік паролі
+VITE_ADMIN_PASSWORD="admin123"
+
 # Қосымша баптаулар
-NODE_ENV=development 
-# dd)31CS*POqG
+NODE_ENV=development
